# amdram

./: .hlint.yaml  README.md  cabal.project
.github/workflows/: barbies-extra.yaml  bench-skip.yaml  bench.yaml  build-skip.yaml  build.yaml  format-skip.yaml  format.yaml  free-extra.yaml  generic-toolbox.yaml  helper-benchmark.yaml  helper-build.yaml  helper-format.yaml  helper-lint.yaml  helper-test.yaml  libraries.yaml  lint-skip.yaml  lint.yaml  roughly.yaml  shaders.yaml  test-skip.yaml  test.yaml
barbies-extra/: barbies-extra.cabal
barbies-extra/source/Barbies/: Extra.hs
barbies-extra/tests/Barbies/: ExtraSpec.hs
free-extra/: free-extra.cabal
free-extra/source/Control/Comonad/Cofree/: Extra.hs
free-extra/tests/Control/Comonad/Cofree/: ExtraSpec.hs
generic-toolbox/: generic-toolbox.cabal
generic-toolbox/source/Toolbox/: Generic.hs
generic-toolbox/tests/Toolbox/: GenericSpec.hs
roughly/: roughly.cabal
roughly/source/Helper/: Roughly.hs
roughly/tests/Helper/: RoughlySpec.hs
shaders/: shaders.cabal
shaders/benchmarks/: Main.hs
shaders/source/Control/Comonad/Cofree/: Extra.hs
shaders/source/Shader/: Expression.hs
shaders/source/Shader/Compiler/: Assignment.hs
shaders/source/Shader/Expression/: Addition.hs  Cast.hs  Constants.hs  Core.hs  Logic.hs  Share.hs  Type.hs  Vector.hs
shaders/tests/Control/Comonad/Cofree/: ExtraSpec.hs
shaders/tests/Helper/: Renderer.hs  RendererSpec.hs  Roughly.hs  RoughlySpec.hs
shaders/tests/Shader/Compiler/: AssignmentSpec.hs
shaders/tests/Shader/Expression/: AdditionSpec.hs  CastSpec.hs  ConstantsSpec.hs  CoreSpec.hs  LogicSpec.hs  ShareSpec.hs  SpecHook.hs  VectorSpec.hs
