cabal-version: 3.6
name: barbies-extra
version: 0.1.0.0

library
  exposed-modules:
    Barbies.Extra
  build-depends:
    , barbies
    , base
  hs-source-dirs: source
  default-language: GHC2021

test-suite barbies-extra-test
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: source, tests
  main-is: Spec.hs
  build-depends:
    , barbies
    , base
    , hedgehog
    , hspec
    , hspec-hedgehog
  build-tool-depends:
    hspec-discover:hspec-discover
  other-modules:
    Barbies.Extra
    Barbies.ExtraSpec
