cabal-version: 3.4
name: free-extra
version: 0.1.0.0

library
  exposed-modules:
    Control.Comonad.Cofree.Extra
  build-depends:
    , base
    , data-fix
    , free
    , recursion-schemes
  ghc-options: -Wall -Wextra
  hs-source-dirs: source
  default-language: GHC2021

test-suite free-extra-test
  default-language: GHC2021
  type: exitcode-stdio-1.0
  ghc-options: -Wall -Wextra
  hs-source-dirs: source, tests
  main-is: Spec.hs
  build-depends:
    , base
    , data-fix
    , free
    , hedgehog
    , hspec
    , hspec-hedgehog
    , recursion-schemes
  build-tool-depends:
    hspec-discover:hspec-discover
  other-modules:
    Control.Comonad.Cofree.Extra
    Control.Comonad.Cofree.ExtraSpec
