cabal-version: 3.4
name: shaders
version: 0.1.0.0

benchmark shaders-benchmark
  default-language: GHC2021
  type: exitcode-stdio-1.0
  ghc-options: -Wall -Wextra
  hs-source-dirs: benchmarks, source
  main-is: Main.hs
  build-depends:
    , base
    , criterion
    , shaders

library
  exposed-modules:
    Shader.Expression
  other-modules:
    Shader.Expression.Addition
    Shader.Expression.Cast
    Shader.Expression.Constants
    Shader.Expression.Core
    Shader.Expression.Logic
    Shader.Expression.Type
    Shader.Expression.Vector
  build-depends:
    , base
    , free
    , language-glsl
    , linear
    , OpenGL
    , recursion-schemes
  ghc-options: -Wall -Wextra
  hs-source-dirs: source
  default-language: GHC2021

test-suite shaders-test
  default-language: GHC2021
  type: exitcode-stdio-1.0
  ghc-options: -Wall -Wextra
  hs-source-dirs: source, tests
  main-is: Spec.hs
  build-depends:
    , base
    , bytestring
    , free
    , hedgehog
    , hspec
    , hspec-hedgehog
    , language-glsl
    , linear
    , OpenGL
    , prettyclass
    , recursion-schemes
    , sdl2
    , shaders
    , string-interpolate
  build-tool-depends:
    hspec-discover:hspec-discover
  other-modules:
    Shader.Expression
    Shader.Expression.SpecHook
    Shader.Expression.Addition
    Shader.Expression.AdditionSpec
    Shader.Expression.Cast
    Shader.Expression.CastSpec
    Shader.Expression.Constants
    Shader.Expression.ConstantsSpec
    Shader.Expression.Core
    Shader.Expression.CoreSpec
    Shader.Expression.Logic
    Shader.Expression.LogicSpec
    Shader.Expression.Type
    Shader.Expression.Vector
    Shader.Expression.VectorSpec

    Helper.Roughly
    Helper.RoughlySpec
    Helper.Renderer
    Helper.RendererSpec
